--- a/index.html
+++ b/index.html
@@ -7,35 +7,38 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="login-box">
-      <form action="">
-        <h3>Login</h3>
-        <div class="input-box">
-          <span class="icon">
-            <ion-icon name="mail-outline"></ion-icon>
-        </span>
-          <input type="email" name="" id="" required />
-          <label for="email">Email</label>
+    <section>
+        <div class="login-box">
+          <form action="">
+            <h3>Login</h3>
+            <div class="input-box">
+              <span class="icon">
+                <ion-icon name="mail-outline"></ion-icon>
+            </span>
+              <input type="email" name="" id="" required />
+              <label for="email">Email</label>
+            </div>
+            <div class="input-box">
+              <span class="icon">
+                <ion-icon name="lock-closed-outline"></ion-icon>
+            </span>
+              <input type="password" name="" id="" required />
+              <label for="password">Password</label>
+            </div>
+            <div class="remember-forget">
+                <label>
+                    <input type="checkbox" name="" id="">Remember
+                </label>
+                <a href="#">Forget Password?</a>
+            </div>
+            <button type="submit">Login</button>
+            <div class="register-link">
+                <p>Don`t have an account?<a href="#">Register</a></p>
+            </div>
+          </form>
         </div>
-        <div class="input-box">
-          <span class="icon">
-            <ion-icon name="lock-closed-outline"></ion-icon>
-        </span>
-          <input type="password" name="" id="" required />
-          <label for="password">Password</label>
-        </div>
-        <div class="remember-forget">
-            <label>
-                <input type="checkbox" name="" id="">Remember
-            </label>
-            <a href="#">Forget Password?</a>
-        </div>
-        <button type="submit">Login</button>
-        <div class="register-link">
-            <p>Don`t have an account?<a href="#">Register</a></p>
-        </div>
-      </form>
-    </div>
+
+    </section>
 
     <script
       type="module"
