--- a/card.html
+++ b/card.html
@@ -12,6 +12,7 @@
             <div class="card">
                 <div class="imgBx">
                     <img src="./image/shoes.png" alt="shoes image">
+                    <h1>Nike Shoes</h1>
                 </div>
             </div>
         </div>
