--- a/card.html
+++ b/card.html
@@ -14,6 +14,24 @@
                     <img src="./image/shoes.png" alt="shoes image">
                     <h1>Nike Shoes</h1>
                 </div>
+                <div class="content">
+                    <div class="size">
+                        <h2>
+                            <span>7</span>
+                            <span>8</span>
+                            <span>9</span>
+                            <span>10</span>
+                        </h2>
+                    </div>
+                    <div class="color">
+                        <h2>
+                            <span>7</span>
+                            <span>8</span>
+                            <span>9</span>
+                            <span>10</span>
+                        </h2>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
