--- a/card.html
+++ b/card.html
@@ -16,21 +16,19 @@
                 </div>
                 <div class="content">
                     <div class="size">
-                        <h2>
+                        <h2>Size : </h2>
                             <span>7</span>
                             <span>8</span>
                             <span>9</span>
                             <span>10</span>
-                        </h2>
                     </div>
                     <div class="color">
-                        <h2>
-                            <span>7</span>
-                            <span>8</span>
-                            <span>9</span>
-                            <span>10</span>
-                        </h2>
+                        <h2>Color : </h2>
+                            <span></span>
+                            <span></span>
+                            <span></span>
                     </div>
+                    <a href="#">Buy Now</a>
                 </div>
             </div>
         </div>
