--- a/card.html
+++ b/card.html
@@ -31,6 +31,50 @@
                     <a href="#">Buy Now</a>
                 </div>
             </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="./image/shoes.png" alt="shoes image">
+                    <h1>Nike Shoes</h1>
+                </div>
+                <div class="content">
+                    <div class="size">
+                        <h2>Size : </h2>
+                            <span>7</span>
+                            <span>8</span>
+                            <span>9</span>
+                            <span>10</span>
+                    </div>
+                    <div class="color">
+                        <h2>Color : </h2>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                    </div>
+                    <a href="#">Buy Now</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="imgBx">
+                    <img src="./image/shoes.png" alt="shoes image">
+                    <h1>Nike Shoes</h1>
+                </div>
+                <div class="content">
+                    <div class="size">
+                        <h2>Size : </h2>
+                            <span>7</span>
+                            <span>8</span>
+                            <span>9</span>
+                            <span>10</span>
+                    </div>
+                    <div class="color">
+                        <h2>Color : </h2>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                    </div>
+                    <a href="#">Buy Now</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
