--- a/card.html
+++ b/card.html
@@ -34,7 +34,7 @@
             <div class="card">
                 <div class="imgBx">
                     <img src="./image/shoes.png" alt="shoes image">
-                    <h1>Nike Shoes</h1>
+                    <h1>Addidas Shoes</h1>
                 </div>
                 <div class="content">
                     <div class="size">
@@ -56,7 +56,7 @@
             <div class="card">
                 <div class="imgBx">
                     <img src="./image/shoes.png" alt="shoes image">
-                    <h1>Nike Shoes</h1>
+                    <h1>Apex Shoes</h1>
                 </div>
                 <div class="content">
                     <div class="size">
